--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
           </nav>
     </header>
 
-    <div class="container">
+    <main class="container">
         <h1 class="mb-5"><i class="fas fa-drum"></i> Welcome to ICE-2</h1>
         <button id="AboutUsButton" class="btn btn-primary">Learn More About Us!</button>
 
-    </div>
+    </main>
     <!-- Scripting Section -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
