--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
     </header>
 
     <div class="container">
-        <h1 class="mb-5"></h1><i class="fas fa-drum"></i> Contact Us</h1>     
+        <h1></h1><i class="fas fa-drum"></i> Contact Us</h1>     
 
     </div>
     <!-- Scripting Section -->
