--- a/contact.html
+++ b/contact.html
@@ -20,19 +20,19 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
+                  <li id="home-link" class="nav-item">
                     <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li id="products-link" class="nav-item">
                     <a class="nav-link" href="products.html"><i class="fas fa-project-diagram"></i> Products</a>
                   </li>
-                  <li class="nav-item">
+                  <li id="services-link" class="nav-item">
                     <a class="nav-link" href="services.html"><i class="fas fa-map"></i> Services</a>
                   </li>
-                  <li class="nav-item">
+                  <li id="about-link" class="nav-item">
                     <a class="nav-link" href="about.html"><i class="fas fa-info"></i> About Us</a>
                   </li>
-                  <li class="nav-item">
+                  <li id="contact-link" class="nav-item">
                     <a class="nav-link active" aria-current="page" href="contact.html"><i class="fas fa-envelope"></i> Contact Us</a>
                   </li>
                 </ul>
@@ -70,18 +70,9 @@
               <textarea name="message" id="message" class="form-control" aria-label="Message Area" required></textarea>
             </div>
   
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="subscribeCheckbox" name="subscribeCheckbox">
-              <label class="form-check-label" for="subscribeCheckbox">Subscribe to our Contact List</label>
-            </div>
-  
-            <button id="sendButton" type="submit" class="btn btn-primary"><i class="fas fa-envelope fa-lg"></i> Send</button>
-            <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo fa-lg"></i> Cancel</button>
+            <button id="sendButton" onclick="setTimeout(SubmitRedirect, 3000);" type="submit" class="btn btn-primary mb-4"><i class="fas fa-envelope fa-lg"></i> Send</button>
+            <button id="cancelButton" type="reset" class="btn btn-warning mb-4"><i class="fas fa-undo fa-lg"></i> Cancel</button>
           </form>
-
-          <div class="col-lg-3 col-md-3">
-            <a href="contact-list.html" class="btn btn-primary btn-lg"><i class="fas fa-users fa-lg"></i> Show Contact List</a>
-          </div>
       </div>
     </main>
 
@@ -91,6 +82,12 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script>
+    function SubmitRedirect()
+    {
+      window.location.href = "index.html";
+    }
+    </script>
     <script src="./Scripts/contact.js"></script>
     <script src="./Scripts/app.js"></script>
 </body>
