deployed ICE7 to live server

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./Content/app.css">
     <link rel="shortcut icon" href="#">
+
+    <!-- Scripts that will trigger before content loads -->
+    <script src="./Scripts/namespace.js"></script>
+    <script src="./Scripts/router.js"></script>
+    <script src="./Scripts/user.js"></script>
+    <script src="./Scripts/contact.js"></script>
+    <script src="./Scripts/authguard.js"></script>
+
+    <script src="./Scripts/contact.js"></script>
 </head>
 <body>
     <header>
@@ -17,11 +26,9 @@
     </header>
 
     <main class="container">
-        <h1 class="mb-5"><i class="fas fa-drum"></i> Welcome to ICE-6</h1>
-        <button id="AboutUsButton" class="btn btn-primary">Learn More About Us!</button>
-
+        
     </main>
-    <!-- Scripting Section -->
+    <!-- Scripts that will run after the content loads -->
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
